feat: Add docker, use Postgres

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "API for tasks manager app"
 authors = [
     {name = "Jonáš Petrovský",email = "jontesek@gmail.com"}
 ]
-readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django (>=6.0.1,<7.0.0)",
@@ -13,7 +12,8 @@ dependencies = [
     "markdown (>=3.10.1,<4.0.0)",
     "django-filter (>=25.2,<26.0)",
     "structlog (>=25.5.0,<26.0.0)",
-    "psycopg[binary] (>=3.3.2,<4.0.0)"
+    "psycopg[binary] (>=3.3.2,<4.0.0)",
+    "dj-database-url (>=3.1.0,<4.0.0)"
 ]
 
 [dependency-groups]
