--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,9 @@ dependencies = [
     "django-filter (>=25.2,<26.0)",
     "structlog (>=25.5.0,<26.0.0)",
     "psycopg[binary] (>=3.3.2,<4.0.0)",
-    "dj-database-url (>=3.1.0,<4.0.0)"
+    "dj-database-url (>=3.1.0,<4.0.0)",
+    "drf-spectacular (>=0.29.0,<0.30.0)"
 ]
-
-[dependency-groups]
-dev = [
-    "pytest (>=9.0.2,<10.0.0)"
-]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
