--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
   app:
-    image: todo-app
     build:
       context: .
       dockerfile: Dockerfile
@@ -28,6 +27,7 @@ services:
     environment:
       - ENVIRONMENT=local
       - DATABASE_URL=postgres://task_user:task_pass@db:5432/todo_app
+      - SECRET_KEY=django-insecure-qr1q-utowh0v7kjlawb4cl4&!yg$wex)@+v2swq$5x74&lix$p
     stdin_open: true # docker run -i
     tty: true        # docker run -t
     depends_on:
