--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "structlog (>=25.5.0,<26.0.0)",
     "psycopg[binary] (>=3.3.2,<4.0.0)",
     "dj-database-url (>=3.1.0,<4.0.0)",
-    "drf-spectacular (>=0.29.0,<0.30.0)"
+    "drf-spectacular (>=0.29.0,<0.30.0)",
+    "django-structlog (>=10.0.0,<11.0.0)",
 ]
 
 [build-system]
