--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 100
+exclude = [
+    "migrations",
+]
 
 [tool.ruff.lint]
 select = [
